# study-buddy

./: .gitignore  404.html  CNAME  README.md  docker-compose.yml  index.html
assets/: index-5NMaM6vw.js  index-Ak5kR6SF.js  index-B6jfl-7Q.css  index-BHBnkYNK.css  index-BX7fnz7s.css  index-BwS8_Ts8.js  index-C18Q-kG6.css  index-C4HcOOP8.js  index-C7IbqUqF.js  index-CJpCDxTc.js  index-CSbwwx6k.css  index-CgBlmnSX.js  index-D0bugzJ_.js  index-D51DTt8A.js  index-DN1Na3DQ.js  index-DSBEeEaO.css  index-DZ0itJOk.js  index-DbjOAfSd.css  index-DjC4Y2qX.js  index-DpnP30QI.js  index-JKdUEjaG.js  index-aWwUN3S_.js  index-dHMoFiEU.js  index-jdkBrY12.js
backend/: .env.example  .gitignore  audit_results.py  pyproject.toml  run_full_test.py  test_search.py
backend/alembic/: env.py
backend/alembic/versions/: 10f4acad51b1_make_document_id_nullable.py  6a1f19d55db5_initial_schema.py  8f64a8670b44_add_theme_preference_to_users.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py  graph.py  quiz.py  upload.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/models/: __init__.py  chat.py  chunk.py  document.py  user.py
backend/app/schemas/: auth.py  chat.py  document.py
backend/app/services/: auth.py  chunker.py  email_service.py  embeddings.py  graph_service.py  hybrid_search.py  ingestion.py  llm.py  pdf_parser.py  persona.py  vector_search.py  vision_service.py  web_search.py
backend/tests/: conftest.py  test_auth.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mobile/: App.tsx  (+5 more)
(+39 files in other folders)
